force-app/main/default/objects/ContractRelationship__c/ContractRelationship__c.object-meta.xml
<CustomObject>
    <label>Contract Relationship</label>
    <nameField>
        <label>Contract Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>