force-app/main/default/objects/ContractRelationship__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contract Relationships</relationshipLabel>
    <relationshipName>Contract_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>